# data-loader

./: loader.props  main.py  pyproject.toml
src/loader/: Loader.py  config.py  loader.py
