[project]
name = "data-loader"
version = "0.1.0"
description = ""
authors = [
    {name = "Neil Brittliff",email = "Neil.Brittliff@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector==4.46.0",
    "psycopg2==2.9.9",
    "DateTime==5.5",
    "matplotlib (==3.10.1)",
    "numpy (==2.2.5)"
]

[tool.poetry]
packages = [{include = "euc_reporting", from = "src"}]

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus.../repository/pypi-org/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
