[project]
name = "euc-reporting"
version = "0.1.0"
description = ""
authors = [
    {name = "NFB496",email = "Neil.Brittliff@servicesaustralia.gov.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector==4.46.0",
    "psycopg2==2.9.9",
    "DateTime==5.5",
    "matplotlib (==3.10.1)",
    "numpy (==2.2.5)",
    "configparser (==7.2.0)"
]

[tool.poetry]
packages = [{include = "euc_reporting", from = "src"}]

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus-dhs.csda.gov.au/repository/pypi-org/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
